Refactor the update checker and replace some exception prints with logger messages