@@ -8,11 +8,16 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Scanner;
 import java.util.logging.Level;
 
 public class HangarUpdateChecker implements UpdateChecker {
+
+    private static final String LATEST_RELEASE = "https://hangar.papermc.io/api/v1/projects/%s/latestrelease";
+    private static final String DOWNLOAD_FILE = "https://hangar.papermc.io/api/v1/projects/%s/versions/%s/PAPER/download";
 
     private final JavaPlugin plugin;
 
@@ -23,7 +28,16 @@ public class HangarUpdateChecker implements UpdateChecker {
     @Nullable
     public String getLatestRelease() {
         PluginDescriptionFile description = plugin.getDescription();
-        try (InputStream inputStream = new URL("https://hangar.papermc.io/api/v1/projects/%s/latestrelease".formatted(description.getName())).openStream(); Scanner scanner = new Scanner(inputStream)) {
+        URI uri = URI.create(LATEST_RELEASE.formatted(description.getName()));
+        URL url;
+        try {
+            url = uri.toURL();
+        } catch (MalformedURLException e) {
+            plugin.getLogger().log(Level.WARNING, "Failed to retrieve the newest version of the plugin", e);
+            return null;
+        }
+
+        try (InputStream inputStream = url.openStream(); Scanner scanner = new Scanner(inputStream)) {
             if (!scanner.hasNext())
                 return null;
             return scanner.next();
@@ -38,8 +52,18 @@ public class HangarUpdateChecker implements UpdateChecker {
     public @Nullable InputStream download(@NotNull String version) {
         Preconditions.checkNotNull(version, "version");
         PluginDescriptionFile description = plugin.getDescription();
+
+        URI uri = URI.create(DOWNLOAD_FILE.formatted(description.getName(), version));
+        URL url;
         try {
-            return new URL("https://hangar.papermc.io/api/v1/projects/%s/versions/%s/PAPER/download".formatted(description.getName(), version)).openStream();
+            url = uri.toURL();
+        } catch (MalformedURLException e) {
+            plugin.getLogger().log(Level.WARNING, "Failed to retrieve the newest version of the plugin", e);
+            return null;
+        }
+
+        try {
+            return url.openStream();
         } catch (IOException e) {
             plugin.getLogger().log(Level.WARNING, "Failed to download the newest version", e);
         }
